near-sdk/compilation_tests/bad_argument.stderr
error: Unsupported argument type.
  --> compilation_tests/bad_argument.rs:30:56
   |
30 |     pub fn insert(&mut self, key: TypeA, value: TypeB, t: impl MyTrait) -> Option<TypeB> {
   |                                                        ^
